CRA-template: fix dark mode

--- a/packages/cra-template/src/index.css
+++ b/packages/cra-template/src/index.css
@@ -7,6 +7,7 @@ body {
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen;
 }
 
 code {
